<resources>
	<string name="ANTplus">ANT+&#8482;</string>
	<string name="pref_tcx_idle_time_key">tcx_idle_default</string>
	<string name="pref_distance_key">distance_default</string>
	<string name="pref_unit_key">unit_default</string>
	<string name="pref_distance_default">0</string>
	<string name="pref_unit_default">0</string>
	<string name="app_name">CycleBike+</string>
	<string name="title_activity_display">CycleBike+</string>
	<string name="zero">00.0</string>
	<string name="zero_time">00:00:00</string>
	<string name="trip_zeros">000.0</string>
	<string name="default_circum">2.149</string>
	<string name="activity_name">SettingsActivity</string>
	<string name="use_ant_">Use ANT+</string>
	<string name="show_ant">Show ANT+ Data</string>
	<string name="pref_activity_file_key">activity_file_default</string>
	<string name="pref_activity_file_dialog_title">Activity File Format </string>
	<string name="pref_activity_file_title">Activity format</string>
	<string name="pref_activity_file_default">0</string>
	<string name="pref_unit_dialog_title">Units </string>
	<string name="pref_unit_summary">miles or kilometers</string>
	<string name="pref_unit_title">Units</string>
	<string name="pref_distance_dialog_title">Distance type </string>
	<string name="pref_distance_summary">Route distance or direct distance</string>
	<string name="pref_distance_title">Distance Display</string>
	<string name="pref_tcx_idle_time_dialog_title">Select idle-time (hrs) </string>
	<string name="pref_tcx_idle_time_summary">Choose idle-time</string>
	<string name="pref_tcx_idle_time_title">tcx file auto-reset</string>
	<string name="pref_tcx_idle_time_default">0</string>
	<string name="pref_trackpoint_density_key">trackpoint_density_default</string>
	<string name="pref_trackpoint_density_dialog_title">Select TrackPoint Density </string>
	<string name="pref_trackpoint_density_title">Track point Density</string>
	<string name="pref_trackpoint_density_default">1</string>
	<string name="sharing_alert">New Activity will start</string>
	<string name="sharing_text">Sharing this activity resets trip data</string>
	<string name="menu_load">Load route</string>
	<string name="menu_ant">ANT+&#8482; Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_settings">Settings</string>
	<string name="share">Upload tcx</string>
	<string name="body_section1">There are plenty of navigation applications, but
		none of them follow a prescribed route, as you would on an organized
		ride. A paper sheet with routing directions is so 20th century.
		CycleBike+ uses the GPS receiver in your smart phone to display the
		navigation directions, and more! There is a cycling computer that
		displays speed, distance, and other info. The GPS receiver records
		locations, distance travelled and speed. ANT+ sensors can measure
		speed, cadence, heart-rate and power. See the Information page in the
		ANT+ Configuration menu.
	</string>
	<string name="body_section2">Line-by-line instructions have a directional arrow,
		description (usually the name of the street), the distance to the next
		intersection along the route, and angular direction to the
		intersection. The display scrolls automatically when a intersection is
		reached; or can be scrolled manually to preview and review the route.
		If you deviate from the route, or do not start at the beginning of the
		route, the scrolling feature may not work and the distance to the next
		intersection will be erroneous. You may resume navigating the route
		after bicycling for some distance. You can long-click an instruction
		in the list to continue navigating from this point. It\'s possible to
		navigate only a section of the route, or deviate from the prescribed
		route. If an intersection is closer than 0.25 miles, one can
		long-click the appropriate row in the turn-list to resume navigation.
	</string>
	<string name="body_section2a">Battery management is critical in this app. At
		least half of battery life is just the display back-light. Turn-off
		WiFi, Bluetooth, etc to prolong useful battery life. Only the GPS
		sensor is used. Set screen brightness to minimum.
	</string>
	<string name="body_section3">You can create navigation files using the
		RideWithGPS, Bikely, BikeRouteToaster web sites. Install the files on
		the external memory card of your smart phone. You can also use
		navigation files created in Garmin MapSource, if instructions such as
		\'Left\'or \'Right\' are entered into the comment fields for the
		way-points. These files have a \'.gpx\' extension. Often these files
		are just track-points, without way-point or turn data. Track-point
		files are not useful in this app. Other types of files may or may not
		be readable. In BikeRouteToaster export XML files or TCX files with
		\"Include Course Points\" box checked. In RideWithGPS export GPX route
		files, or GPX track files with \"Include cues as waypoints\" box
		checked.
	</string>
	<string name="body_section4">Load route: allows selection of a route stored in
		the device file system\nReset: erases all data about the current
		trip\nRestore Route: restores trip data to the point of
		interruption\nSettings: customize the information display\nANT+&#8482;
		: Configure and display ANT+ sensor information
	</string>
	<string name="body_section4a">Trip data is saved as a .tcx file that records
		location, speed, distance and ANT+ sensor data for uploading to
		Garmin-Connect, Ride-with-GPS, or Strava, etc. A new trackpoint is
		saved each time a GPS location is received, about once per second.
		There are several ways to upload the .tcx files. In Strava, use an
		Android browser to navigate to the Upload Activity -> From File and
		press the Browse button. You will need a file manager app like FileManager
		to select the tcx file. These files are placed in Android /
		Data / com.cyclebikeapp.plus1 / files. One can also copy files to
		Google Drive, Dropbox, or the Desktop and upload them from there.
		\nClick the share icon to e-mail files to Strava, RWGPS, or elsewhere.
		Make sure the \"from\" address is your log-in e-mail
	</string>
	<string name="body_section5">Don\'t be foolish: use this app responsibly and
		don\'t play with your phone while riding. Stop in a safe place if you
		need to use the Options Menu, scroll the route display, or turn-on the
		GPS. You have been warned! Don\'t blindly follow the turn arrow: make
		sure a road is there before you turn. Don\'t ride straight into a
		brick wall, a barricade, or a blocked-off bridge. Keep your head up.
	</string>
	<string name="copy_right">
		\nCopyright © 2014 cyclebikeapp. All Rights
		Reserved.\n
	</string>
	<string name="about_section1">What\'s this app all about?</string>
	<string name="about_section2">Display</string>
	<string name="about_section2a">Tips</string>
	<string name="about_section3">Route Files</string>
	<string name="about_section4">Menus</string>
	<string name="about_section4a">tcx Files</string>
	<string name="about_section5">Danger!!!</string>
	<string name="about_ant_section1">Intro to ANT+&#8482;</string>
	<string name="about_ant_section2">How to connect devices to CycleBike</string>
	<string name="about_ant_section3">Danger!!!</string>
	<string name="ant_body_section1"> ANT+&#8482; is a wireless interface between
		read-out displays like CycleBike+ on this Android phone and sensors
		like a heart-rate monitor. Read more about it at
		http://www.thisisant.com/. Only Android phones that contain the ANT+
		chip or ANT+ USB sticks can interface to ANT+&#8482; sensors using
		this app. Visit
		http://www.thisisant.com/consumer/ant-101/ant-in-phones/ for a list of
		Android enabled devices. Visit
		http://www.thisisant.com/directory/cyclebikeplus/ for a list of
		compatible sensors.
	</string>
	<string name="ant_body_section2"> A sensor must be learned so it can be
		connected to the ANT+ interface. Use the menu to learn a sensor by
		pressing the \"Search and Pair\" button. A dialog box will display the progress of the
		search for the sensor. Select the proper sensor from the displayed list, and
		optionally give the sensor a name. Returning to the device dialog box will
		display information about the sensor like device number or hours of
		operating time. 
		Notice there is a difference between a cadence sensor and a combined
		speed-cadence sensor. Once a sensor has been learned, it will be
		connected automatically when running CycleBike+. A message like
		\"tracking\" or data on the display will verify that the sensor has
		been recognized. The ANT+&#8482; interface requires the ANT+&#8482;
		plug-in library, available from the Google Play store. \n\nThe
		Settings menu has an option to show or hide the cadence, heart-rate
		and power display. Click on the cadence, heart-rate or power values to
		see more data. \n\nIn general, the GPS speed display is not very
		accurate, especially in convoluted terrain. After a calibration
		period, the speed sensor is used instead of the GPS speed. The wheel
		circumference must be calibrated, but the speed sensor only measures
		wheel revolutions. After about 1 mile of travel, the speed sensor is
		automatically calibrated by comparing to GPS data and is then used for
		the speed display. \n\n The power meter should be calibrated before
		the readings are accurate. Once a power sensor has been learned, a
		\"Calibrate\" button is shown in the power device menu. Read the
		manufacturer\'s instructions about the power meter and then press the
		Calibrate button. The result of the calibration procedure will be
		displayed at the bottom of the screen.
	</string>
	<string name="ant_body_section3"> Don\'t be foolish: pair your ANT+ sensors before
		you start bicycling. Just spin the wheels, pedal the cranks backwards
		and this will activate the sensors. Once paired, you don\'t have to
		touch your phone while bicycling. And your friends will not laugh at
		you if you fall.
	</string>
	<string name="reset_title">Reset trip data</string>
	<string name="menu_reset">Reset</string>
	<string name="reset_message">Zero Trip-distance, ride-time, max?</string>
	<string name="restore_title">Restore trip data</string>
	<string name="menu_restore">Restore Route</string>
	<string name="restore_message">Restart previous route?</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="no">No</string>
	<string name="yes">yes</string>
	<string name="na">N/A</string>
	<string name="reqGPSOn_title">Enable GPS</string>
	<string name="reqGPSOn_message">Turn-on GPS receiver</string>
	<string name="cadence_title">Cadence-rpm</string>
	<string name="power_watts_title">Power-watts</string>
	<string name="heart_rate_bpm_title">Heart Rate-bpm</string>
	<string name="trip_dist_mi">Trip Dist-mi</string>
	<string name="trip_dist_km">Trip Dist-km</string>
	<string name="trip_time">Ride Time</string>
	<string name="avg_speed_mph">Avg-mph</string>
	<string name="avg_speed_kph">Avg-kph</string>
	<string name="max_speed_mph">Max-mph</string>
	<string name="max_speed_kph">Max-kph</string>
	<string name="curr_gps_speed_mph">Speed-mph</string>
	<string name="curr_gps_speed_kph">Speed-kph</string>
	<string name="req_gps_on">GPS receiver is disabled</string>
	<string name="use_trainer_mode">Enable Trainer Mode</string>
	<string name="select_velo">Choose Spoofer Location:</string>
	<string name="trainer_mode_withstrava_spoofer">Trainer Mode with \"Strava Spoofer\"</string>
	<string name="about_trainer_mode">Get Strava credit for your trainer rides! Trainer
		Mode uses your speed sensor to generate time-tagged locations around
		the site selected from the list below. ANT+ sensor data will be
		recorded.
	</string>
	<string name="tm_comment">Comment</string>
	<string name="exit_tm_btn_text">Exit Trainer Mode</string>
	<string name="hivizdisplay">High-visibility Display</string>
	<string name="pref_auto_pause">Auto-Pause Recording</string>
</resources>