<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_about" android:title="@string/menu_about"
		android:icon="@drawable/ic_menu_about" android:orderInCategory="0"
		android:showAsAction="never"  />
	<item android:id="@+id/menu_load" android:title="@string/menu_load"
		android:icon="@drawable/ic_menu_load" android:orderInCategory="4"
		android:showAsAction="never" />
	<item android:id="@+id/menu_reset" android:title="@string/menu_reset"
		android:icon="@drawable/ic_menu_revert" android:orderInCategory="3"
		android:showAsAction="never" />
	<item android:id="@+id/menu_restore_route" android:title="@string/menu_restore"
		android:icon="@drawable/ic_menu_restore" android:orderInCategory="2"
		android:showAsAction="never" />
	<item android:id="@+id/menu_settings" android:title="@string/menu_settings"
		android:icon="@drawable/ic_menu_settings" android:orderInCategory="1"
		android:showAsAction="never" />
		<item android:id="@+id/menu_ant" android:title="@string/menu_ant"
		android:icon="@drawable/ic_menu_settings" android:orderInCategory="5"
		android:showAsAction="never" />
	<item android:id="@+id/action_share" android:title="@string/share"
		android:showAsAction="ifRoom"
		android:icon="@drawable/ic_menu_share" />
</menu>
