<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:layout_marginBottom="4dp">

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
		android:layout_margin="4dp" android:orientation="vertical"
		android:background="@color/aboutscroller_background">


		<TextView android:id="@+id/textView99" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="4dp"
			android:layout_marginLeft="2dp" android:layout_marginTop="6dp"
			android:text="@string/about_ant_section1" android:textAppearance="@style/header_style" />

		<TextView android:id="@+id/textView9" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="2dp"
			android:text="@string/ant_body_section1" android:textAppearance="@style/body_text" />

		<TextView android:id="@+id/textView990" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="4dp"
			android:layout_marginLeft="2dp" android:layout_marginTop="6dp"
			android:text="@string/about_ant_section2" android:textAppearance="@style/header_style" />

		<TextView android:id="@+id/textView909" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="2dp"
			android:text="@string/ant_body_section2" android:textAppearance="@style/body_text" />

		<TextView android:id="@+id/textView9090" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="4dp"
			android:layout_marginLeft="2dp" android:layout_marginTop="6dp"
			android:text="@string/about_ant_section3" android:textAppearance="@style/header_style" />

		<TextView android:id="@+id/textView9009" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="2dp"
			android:text="@string/ant_body_section3" android:textAppearance="@style/body_text" />

		<TextView android:id="@+id/textView697" android:layout_width="match_parent"
			android:layout_height="match_parent" android:layout_marginBottom="4dp"
			android:layout_marginLeft="2dp" android:text="@string/copy_right"
			android:textAppearance="@style/copyright_text" />

	</LinearLayout>

</ScrollView>